src/objects/SAP_CMD_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Group__c</fullName>
        <formula>SAP_CMD__r.RecordType.Name</formula>
        <label>Account Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status_Formula__c</fullName>
        <formula>TEXT( SAP_CMD__r.Status__c )</formula>
        <label>Approval Status (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Ready to Submit</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMD_Request_Owner__c</fullName>
        <formula>CMD_Request__r.Owner:User.FirstName + &apos;&apos; + CMD_Request__r.Owner:User.LastName</formula>
        <label>CMD Request Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMD_Request_Status_Formula__c</fullName>
        <formula>TEXT( CMD_Request__r.Status__c )</formula>
        <label>CMD Request Status (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMD_Request_Status__c</fullName>
        <formula>TEXT( CMD_Request__r.Status__c )</formula>
        <label>CMD Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMD_Request_Type__c</fullName>
        <formula>CMD_Request__r.RecordType.Name</formula>
        <label>CMD Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMD_Request__c</fullName>
        <label>CMD Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMD_Request__c.RecordType.Name</field>
                <operation>contains</operation>
                <value>SAP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMD_Request__c</referenceTo>
        <relationshipLabel>SAP CMD</relationshipLabel>
        <relationshipName>SAP_CMD_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pending_Approval_Since_Formula__c</fullName>
        <formula>SAP_CMD__r.Pending_Approval_Since__c</formula>
        <label>Pending Approval Since (Formula)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pending_Approval_Since__c</fullName>
        <label>Pending Approval Since</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pending_Approver_Formula__c</fullName>
        <formula>TEXT( SAP_CMD__r.Pending_Approver__c )</formula>
        <label>Pending Approver (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Approver__c</fullName>
        <label>Pending Approver</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SAP_CMD_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_CMD_Approval_Status__c</fullName>
        <formula>TEXT( SAP_CMD__r.Status__c )</formula>
        <label>SAP CMD Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_CMD_Pending_Approval_Since__c</fullName>
        <formula>SAP_CMD__r.Pending_Approval_Since__c</formula>
        <label>SAP CMD Pending Approval Since</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAP_CMD_Pending_Approver__c</fullName>
        <formula>TEXT( SAP_CMD__r.Pending_Approver__c )</formula>
        <label>SAP CMD Pending Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_CMD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAP CMD</label>
        <referenceTo>SAP_CMD__c</referenceTo>
        <relationshipLabel>CMD Requests</relationshipLabel>
        <relationshipName>SAP_CMD_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SAP CMD Request</label>
    <nameField>
        <displayFormat>SAPCMDR{0000000000}</displayFormat>
        <label>SAP CMD Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP CMD Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>